# is_one_layer_enough

./: .gitignore  README.md  requirements.txt
Experiments/: fine_tuning_exp.py  main.py  util.py
Experiments/configs/limix_16m/: config_base.py  config_c0.py  config_c2.py  config_finetuning_decoder.py
Experiments/configs/limix_2m/: config_base.py  config_finetuning_decoder.py
Experiments/configs/tabicl/: config_c1.py  (+5 more)
FoundationModels/: README.md
FoundationModels/Limix/: pyproject.toml
FoundationModels/Limix/limix/: __init__.py
FoundationModels/Limix/limix/config/: cls_default_noretrieval_1.json
FoundationModels/Limix/limix/inference/: inference_method.py  predictor.py  preprocess.py
FoundationModels/Limix/limix/model/: encoders.py  layer.py  transformer.py
FoundationModels/Limix/limix/sklearn/: classifier.py
FoundationModels/Limix/limix/utils/: loading.py
FoundationModels/NanoTabPFN/: pyproject.toml
FoundationModels/TabPFN_v1/: pyproject.toml
FoundationModels/TabPFN_v2/: pyproject.toml
FoundationModels/TabPFN_v2_5/: pyproject.toml
Pretraining/TICLA/: pyproject.toml
Pretraining/TICLA/ticla/: __init__.py
Pretraining/TICLA/ticla/model_configs/: looped_nanotabpfn.py  nanotabpfn.py  onelayer_nanotabpfn.py
Pretraining/TICLA/ticla/models/: utils.py
Pretraining/TICLA/ticla/models/nanotabpfn/: looped_nanotabpfn.py  nanotabpfn.py  onelayer_nanotabpfn.py
Pretraining/TICLA/ticla/priors/tabicl_v1/: dataset.py  genload.py
Pretraining/TICLA/ticla/sklearn/: classifier.py
Pretraining/TICLA/ticla/train/: optim.py  run.py
Regression/: README.md
(+169 files in other folders)
